--- a/Fight_COVID_19_with_Healthier_Diet_.ipynb
+++ b/Fight_COVID_19_with_Healthier_Diet_.ipynb
@@ -18,10 +18,21 @@
     "colab": {
       "name": "Fight COVID-19 with Healthier Diet .ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ashwinprakashv/Hack-Kochi-3.0/blob/main/Fight_COVID_19_with_Healthier_Diet_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
